kompose/event-api/event-api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: event-api
    component: backend
  name: event-api
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    app: event-api
