kompose/event-api/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
    component: backend
  name: mysql
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
  clusterIP: None
  selector:
    app: mysql
