kompose/event-api/redis-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
    component: backend
  name: redis
spec:
  ports:
    - name: "6379"
      port: 6379
      targetPort: 6379
  selector:
    app: redis
