kompose/event-api/event-api-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-api-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: event.ejsadiarin.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: event-api
                port:
                  number: 3000
